# node_vite_react_temp2

./: custom-config.json  index.html  package-lock.json  package.json
.github/workflows/: publish.yml
src/: App.css  App.jsx  LottieAnimation.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json1
src-tauri/src/: lib.rs  main.rs  setup.rs
src-tauri/src/vibrancy/: mod.rs
