[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
#gdk-sys = "0.15.1" # 强制使用 0.15.1 版本
tauri = { version = "1.6.0", features = ["macos-private-api"] }
raw-window-handle = "0.6"

# 从 window-vibrancy 引入的依赖
#tao = { version = "0.30", features = ["x11"] } # 增加 `x11` 特性
#winit = { version = "0.29", features = ["x11"] } # 增加 `x11` 特性


[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = { version = "0.2.2", features = [
  "NSApplication",
  "NSGraphics",
  "NSResponder",
  "NSView",
  "NSVisualEffectView",
] }
objc2-foundation = { version = "0.2.2", features = ["NSThread", "NSGeometry"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]

